Don't set the dependent bit on windows not being opened at chrome, even if it's in the features.  Bug 344257, r=bsmedberg, sr=jst